--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ body._lock {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 25px;
 }
 .block_1 .info {
   width: 45%;
@@ -329,6 +330,26 @@ body._lock {
   .block_1 .info .btn .btn-pay {
     width: 47%;
   }
+  .block_1 .info .info_book h3 {
+    font-size: 18px;
+  }
+  .block_1 .info .info_book p {
+    font-size: 14px;
+  }
+  .block_1 .picture {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .block_1 .info h1 {
+    font-size: 34px;
+  }
+  .block_1 .info .info_book h3 {
+    font-size: 18px;
+  }
+  .block_1 .info .info_book p {
+    font-size: 14px;
+  }
   .block_1 .picture {
     display: none;
   }
@@ -357,6 +378,7 @@ body._lock {
   width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   padding: 25px;
   margin-top: 25px;
 }
@@ -435,7 +457,9 @@ body._lock {
 .block_3 .author_pic {
   margin: 25px;
   width: 50%;
+  height: fit-content;
   border: 10px solid #FFCA42;
+  align-self: center;
 }
 .block_3 .author_pic img {
   filter: drop-shadow(0px 0px 20px rgba(27, 55, 100, 0.3));
@@ -505,11 +529,15 @@ body._lock {
   display: flex;
   flex-direction: row;
   background-color: #1B3764;
-  width: 90%;
+  width: 100%;
   margin-bottom: 25px;
 }
 .block_3 .author_info .card_qr img {
-  margin: 20px;
+  padding: 20px;
+  max-width: 130px;
+  max-height: 130px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .block_3 .author_info .card_qr .text_qr {
   margin: 20px;
@@ -545,10 +573,14 @@ body._lock {
     align-items: center;
     width: 100%;
   }
+  .block_3 .author_info .card_qr img {
+    margin: 0;
+  }
 }
 @media screen and (max-width: 480px) {
   .block_3 .author_info .card_qr img {
     display: none;
+    margin: 0;
   }
 }
 
