--- a/style.scss
+++ b/style.scss
@@ -261,6 +261,7 @@ body._lock {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 25px;
 
     .info {
         width: 45%;
@@ -382,6 +383,14 @@ body._lock {
                     width: 47%;
                 }
             }
+            .info_book{
+                h3{
+                    font-size: 18px;
+                }
+                p{
+                    font-size: 14px;
+                }
+            }
         }
         .picture{
             display: none;
@@ -390,7 +399,25 @@ body._lock {
 }
 
 @media screen and (max-width: 480px) {
+    .block_1{
+        .info{
+            h1{
+                font-size: 34px;
+            }
+            .info_book{
+                h3{
+                    font-size: 18px;
+                }
+                p{
+                    font-size: 14px;
+                }
 
+            }
+        }
+        .picture{
+            display: none;
+        }
+    }
 }
 
 .section_2 {
@@ -419,6 +446,7 @@ body._lock {
         width: 100%;
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         padding: 25px;
         margin-top: 25px;
 
@@ -516,7 +544,9 @@ body._lock {
     .author_pic {
         margin: 25px;
         width: 50%;
+        height: fit-content;
         border: 10px solid $textColorYellow;
+        align-self: center;
 
         img {
             filter: drop-shadow(0px 0px 20px rgba(27, 55, 100, 0.3));
@@ -597,10 +627,14 @@ body._lock {
             display: flex;
             flex-direction: row;
             background-color: $bgColorBlue;
-            width: 90%;
+            width: 100%;
             margin-bottom: 25px;
             img {
-                margin: 20px;
+                padding: 20px;
+                max-width: 130px;
+                max-height: 130px;
+                margin-top: auto;
+                margin-bottom: auto;
             }
 
             .text_qr {
@@ -637,10 +671,17 @@ body._lock {
                 top: -25px;
                 left: -25px;
             }
+            
+
         }
         .author_info {
             align-items: center;
             width: 100%;
+            .card_qr{
+                img{
+                    margin: 0;
+                }
+            }
         }
 
     }
@@ -652,6 +693,7 @@ body._lock {
             .card_qr{
                 img{
                     display: none;
+                    margin: 0;
                 }
             }
         }
